@@ -348,7 +348,8 @@ void add_piece(torrent_handle& th, int piece, char const *data, int flags)
 
 void bind_torrent_handle()
 {
-    void (torrent_handle::*force_reannounce0)() const = &torrent_handle::force_reannounce;
+    // arguments are: number of seconds and tracker index
+    void (torrent_handle::*force_reannounce0)(int, int) const = &torrent_handle::force_reannounce;
 
 #ifndef TORRENT_NO_DEPRECATE
     bool (torrent_handle::*super_seeding0)() const = &torrent_handle::super_seeding;
@@ -442,8 +443,11 @@ void bind_torrent_handle()
         .def("file_priority", &file_prioritity1)
         .def("save_resume_data", _(&torrent_handle::save_resume_data), arg("flags") = 0)
         .def("need_save_resume_data", _(&torrent_handle::need_save_resume_data))
-        .def("force_reannounce", _(force_reannounce0))
+        .def("force_reannounce", _(force_reannounce0)
+			  , (arg("seconds") = 0, arg("tracker_idx") = -1))
+#ifndef TORRENT_NO_DEPRECATE
         .def("force_reannounce", &force_reannounce)
+#endif
 #ifndef TORRENT_DISABLE_DHT
         .def("force_dht_announce", _(&torrent_handle::force_dht_announce))
 #endif
